tests/invalid/proc_without_return.lang
func return_int() -> i32 {

}
